<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".ui.main.mine.MineFragment">

    <include layout="@layout/widget_common_top_bar" />

    <com.vmloft.develop.library.tools.widget.VMLineView
        android:id="@+id/accessibilityStatusLV"
        style="@style/AppLVStyle.Switch"
        app:vm_line_description="@string/accessibility_status_desc"
        app:vm_line_title="@string/accessibility_status_title" />

    <com.vmloft.develop.library.tools.widget.VMLineView
        android:id="@+id/keepAliveStatusLV"
        style="@style/AppLVStyle.Switch"
        app:vm_line_description="@string/keep_alive_status_desc"
        app:vm_line_title="@string/keep_alive_status_title" />

    <com.vmloft.develop.library.tools.widget.VMLineView
        android:id="@+id/hideTaskStatusLV"
        style="@style/AppLVStyle.Switch"
        app:vm_line_description="@string/hide_task_status_desc"
        app:vm_line_title="@string/hide_task_status_title" />
</LinearLayout>
